--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,30 +1,32 @@
-name: .NET Build and Publish
+name: .NET CI/CD on Self-Hosted Runner
 
 on:
   push:
     branches: [main]
 
 jobs:
-  build:
-    runs-on: windows-latest
+  build-and-deploy:
+    runs-on: self-hosted  # 👈 runs on your local IIS machine
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup .NET
+      - name: Setup .NET SDK
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.0.x' # Change if you're using .NET 6, 8, etc.
+          dotnet-version: '7.0.x' # or your .NET version
 
-      - name: Restore Dependencies
+      - name: Restore dependencies
         run: dotnet restore
 
-      - name: Build Project
-        run: dotnet build --no-restore --configuration Release
-
-      - name: Run Tests
-        run: dotnet test --no-build --verbosity normal
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
 
       - name: Publish
         run: dotnet publish --configuration Release --output ./publish
+
+      - name: Deploy to IIS folder
+        run: |
+          Remove-Item -Recurse -Force "C:\inetpub\wwwroot\MyDotNetCIApp\*" -ErrorAction SilentlyContinue
+          Copy-Item -Recurse -Force ./publish/* "C:\inetpub\wwwroot\MyDotNetCIApp\"
